[package]
name = "custom-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
sc-client-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = {workspace = true}
sp-core = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

[features]
default = ["std"]
std = []
