[package]
name = "xcm-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
xcm = { workspace = true }

[features]
default = [ "std" ]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "xcm/std",
]
