[package]
name = "xcm-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
runtime-common = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "runtime-common/std",
    "xcm/std",
]
