[package]
name = "mainnet-runtime"
version = "0.1.0"
authors = { workspace = true }
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
serde_json = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = [
  "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
  "derive",
] }
smallvec = { workspace = true }

# Local
runtime-common = { workspace = true, default-features = false }
pallet-dmarket = { workspace = true, default-features = false }
pallet-marketplace = { workspace = true, default-features = false }
xcm-primitives = { path = "../../primitives/xcm", default-features = false }
pallet-escrow = { workspace = true, default-features = false }
account = { workspace = true, default-features = false }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-executive = { workspace = true, default-features = false }
frame-metadata-hash-extension = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
pallet-aura = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }
pallet-multibatching = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-nfts = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-myth-proxy = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-democracy = { workspace = true, default-features = false }
pallet-vesting = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-genesis-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }

# Polkadot
pallet-xcm = { workspace = true, default-features = false }
polkadot-parachain-primitives = { workspace = true, default-features = false }
polkadot-runtime-common = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm-runtime-apis = { workspace = true, default-features = false }

# Cumulus
cumulus-primitives-aura = { workspace = true, default-features = false }
cumulus-pallet-aura-ext = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
cumulus-pallet-session-benchmarking = { workspace = true, default-features = false }
cumulus-pallet-xcm = { workspace = true, default-features = false }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
cumulus-pallet-weight-reclaim = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-storage-weight-reclaim = { workspace = true, default-features = false }
cumulus-primitives-utility = { workspace = true, default-features = false }
pallet-collator-staking = { workspace = true, default-features = false }
parachain-info = { workspace = true, default-features = false }
parachains-common = { workspace = true, default-features = false }
polkadot-primitives = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "serde_json/std",
  "parity-scale-codec/std",
  "log/std",
  "scale-info/std",
  "cumulus-primitives-aura/std",
  "cumulus-pallet-aura-ext/std",
  "pallet-message-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-pallet-weight-reclaim/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-storage-weight-reclaim/std",
  "cumulus-primitives-utility/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-staking/std",
  "pallet-collective/std",
  "pallet-dmarket/std",
  "pallet-democracy/std",
  "pallet-marketplace/std",
  "pallet-multibatching/std",
  "pallet-multisig/std",
  "pallet-nfts/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "pallet-identity/std",
  "pallet-xcm/std",
  "pallet-proxy/std",
  "pallet-myth-proxy/std",
  "pallet-preimage/std",
  "pallet-scheduler/std",
  "pallet-treasury/std",
  "pallet-vesting/std",
  "parachain-info/std",
  "parachains-common/std",
  "polkadot-parachain-primitives/std",
  "polkadot-runtime-common/std",
  "runtime-common/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-genesis-builder/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "xcm/std",
  "substrate-wasm-builder",
  # Local
  "xcm-primitives/std",
  "pallet-escrow/std",
  "account/std",
]

runtime-benchmarks = [
  "runtime-common/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-staking/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-dmarket/runtime-benchmarks",
  "pallet-democracy/runtime-benchmarks",
  "pallet-marketplace/runtime-benchmarks",
  "pallet-message-queue/runtime-benchmarks",
  "pallet-multibatching/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-nfts/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-myth-proxy/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-transaction-payment/runtime-benchmarks",
  "pallet-vesting/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "cumulus-pallet-session-benchmarking/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "cumulus-pallet-weight-reclaim/runtime-benchmarks",
  "pallet-escrow/runtime-benchmarks",
]

try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "pallet-marketplace/try-runtime",
  "pallet-message-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "cumulus-pallet-weight-reclaim/try-runtime",
  "frame-executive/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collator-staking/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-dmarket/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-multibatching/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-nfts/try-runtime",
  "pallet-session/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-xcm/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-myth-proxy/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-vesting/try-runtime",
  "parachain-info/try-runtime",
  "pallet-escrow/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
