[package]
name = "pallet-nfts-runtime-api"
version = "14.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Runtime API for the FRAME NFTs pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
pallet-nfts = { path = "..", default-features = false }
sp-api = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["parity-scale-codec/std", "pallet-nfts/std", "sp-api/std", "sp-std/std"]
